carina-cli/tests/fixtures/negative/out_of_range_int.crn
# Negative test: integer value out of valid range
# Expected: validation error for ipv4_netmask_length > 32

provider awscc {
  region = awscc.Region.ap_northeast_1
}

awscc.ec2.Vpc {
  cidr_block          = '10.0.0.0/16'
  ipv4_netmask_length = 99
}
